--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -42,13 +42,13 @@
     <div class="side-nav">
         <div class="side-nav-header">
             <h4>
-                Yonglin Wang
+                {{username}}
             </h4>
             <a href="logout" class="logout-btn">LOG OUT</a>
         </div>
         <div class="side-nav-body">
             <a href="">Stream</a>
-            <a href="">Clubs</a>
+            <a href="">Blogs</a>
             <a href="" id="academics"><div class="expand-text">Academics</div><i class="fa fa-bars academics-icon"></i></a>
             <ul class="course-list">
                 <li><a href="">ICS4U1</a></li>
@@ -56,8 +56,7 @@
                 <li><a href="">ENG4U1</a></li>
                 <li><a href="">MDM4U1</a></li>
             </ul>
-            <a href="#">Contributions</a>
+            <a href="#">Editor</a>
         </div>
     </div>
-    <div class="overlay"></div>
 </template>
