--- a/production/imports/ui/stylingsheets/details.less
+++ b/production/imports/ui/stylingsheets/details.less
@@ -58,11 +58,17 @@
   font-family: 'Roboto Mono',monospace;
   a{
     margin-right: 15px;
+    font-size: 15px;
   }
 }
 .post-info{
   font-size: 14px;
   display: flex;
+}
+.post-text{
+  h2{
+    font-size: 30px;
+  }
 }
 .author-img-container{
   margin-right: 5px;
