--- a/production/imports/ui/stylingsheets/navigation.less
+++ b/production/imports/ui/stylingsheets/navigation.less
@@ -142,6 +142,7 @@
     border-bottom: 1px solid #b3b3b3;
     h4{
       width: 70%;
+      font-size: 18px;
     }
     .logout-btn {
       text-decoration: underline;
@@ -169,6 +170,11 @@
     }
   }
 
+}
+.global-search{
+  input{
+    margin-bottom: 0;
+  }
 }
 @media screen and (max-width: 1366px) {
   .top-nav nav .nav-oper{
