--- a/production/client/main.less
+++ b/production/client/main.less
@@ -51,6 +51,7 @@
 @import '{}/imports/ui/stylingsheets/details.less';
 @import '{}/imports/ui/stylingsheets/course.less';
 @import '{}/imports/ui/stylingsheets/alert.less';
+@import '{}/imports/ui/stylingsheets/dash.less';
 @import '{}/imports/ui/stylingsheets/margin-padding.less';
 @light-grey: rgb(236, 235, 234);
 @primary-dark: #43A047;
@@ -60,6 +61,7 @@
 body{
   font-family: "Roboto Condensed", "Source Sans Pro", "Times New Roman", serif;
   transition: all 0.5s;
+  background-color: #e9ebee;
 }
 h1,h2,h3,h4,h5{
   font-family: "Roboto", sans-serif;
@@ -90,7 +92,7 @@ a{
   -webkit-box-shadow: inset 0 -4px 0 #b4f8b8;
   box-shadow: inset 0 -4px 0 #b4f8b8;
   overflow-wrap: break-word;
-  &:hover{
+  &:hover, &:active , &:focus{
     text-decoration: none;
     background-color: #b4f8b8;
     color: #000;
