--- a/production/imports/ui/stylingsheets/stream.less
+++ b/production/imports/ui/stylingsheets/stream.less
@@ -26,19 +26,43 @@
   width: 4%;
 }
 .grid-item{
- margin-bottom: 15px;
+  margin-bottom: 30px;
+  background: #FFFFFF;
+  padding: 15px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+  h3{
+    margin-top: 0;
+    font-size: 28px;
+  }
+  &:hover {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  }
+}
+.grid-blog-body{
+  padding: 15px;
 }
 /* 2 columns wide */
 .grid-item--width2 { width: 66.6%; }
-
+.grid-item-footer{
+  color: #999;
+  font-size: 11px;
+  font-family: 'Roboto Mono', monospace;
+}
 .unselectable {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  cursor: default;
 }
-
+.blog-item{
+  cursor: pointer;
+}
 .item-image {
   display: block;
   width: 100%;
@@ -54,9 +78,11 @@
   overflow: hidden;
   width: 100%;
   height: 0;
-  transition: .5s ease;
+  transition: height .5s ease;
 }
-
+.image{
+  padding: 0 !important;
+}
 .item-container:hover .overlay {
   height: 100%;
 }
@@ -64,7 +90,6 @@
 .text {
   width: 80%;
   color: white;
-
   position: absolute;
   overflow: hidden;
   top: 50%;
@@ -81,4 +106,16 @@
     margin-top: 0;
     margin-bottom:0;
   }
+}
+.overlay-partial {
+  background-color: #FFFFFF;
+  overflow: hidden;
+  width: 85%;
+  padding: 15px;
+  transition: .5s ease;
+  margin: auto;
+  margin-top: 7.5%;
+  margin-bottom: 7.5%;
+  min-height: 200px;
+  opacity: 0.9;
 }
