Minor stream academics update
>Changed blog date picker to single day
>Added text rotation to navigation (Needs optimization)
>Added navigation tabs to course page
>Added new hovering credits to stream images
>Removed unnessesary css

--- a/production/client/main.less
+++ b/production/client/main.less
@@ -27,7 +27,7 @@
  *
  *     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  *
- *      Buddha Bless:  "No Bugs"
+ *               Buddha Bless:  "No Bugs"
  *
  * ========================================================= */
 
@@ -57,6 +57,8 @@
 @primary-dark: #43A047;
 *{
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 body{
   font-family: "Roboto Condensed", "Source Sans Pro", "Times New Roman", serif;
