--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -56,11 +56,7 @@
                             <hr />
                             <h3>Pick a release date</h3>
                             <p>Use the date selector bellow to select the day you would like this post published.</p>
-                            <div class="input-group input-daterange">
-                                <input type="text" class="form-control">
-                                <div class="input-group-addon">to</div>
-                                <input type="text" class="form-control">
-                            </div>
+                                <input type="text" class="form-control input-date">
                             <hr />
                             <h3>Set the visibility</h3>
                             <p>Choose who this blog post is written for, public means people outside the board will receive access.</p>
