--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -2,7 +2,10 @@
     <div class="top-nav">
         <nav>
             <div class="nav-extend"><span class="side-nav-prompt"><i class="fa fa-bars"></i> MENU</span></div>
-            <div class="nav-hub"><span>{{title}}</span></div>
+            <div class="nav-hub">
+                <div class="nav-hub-progress"></div>
+                <div class="nav-title-text text-morph"><span>{{title}} ,::, You Received: 90%</span></div>
+            </div>
             <div class="nav-oper">
                 <span class="top-operation-prompt">
                     {{#if oper}}
