--- a/production/imports/ui/stylingsheets/course.less
+++ b/production/imports/ui/stylingsheets/course.less
@@ -16,7 +16,8 @@
   align-items: center;
 }
 .sections-container{
-  width: 100%;
+  width: 70%;
+  margin: auto;
   text-align: center;
 }
 .scroll-down{
@@ -100,6 +101,11 @@
   padding: 20px;
   h3{
     margin-top:0;
+  }
+}
+.assessment-tabs{
+  h3{
+    display: inline;
   }
 }
 .no-display{
