--- a/production/imports/ui/stylingsheets/navigation.less
+++ b/production/imports/ui/stylingsheets/navigation.less
@@ -77,6 +77,7 @@
       }
     }
     .nav-hub{
+      position: relative;
       background-color: @nav-color;
       padding-top: 15px;
       padding-bottom: 15px;
@@ -102,12 +103,16 @@
       span{
         vertical-align: middle;
         width: 100%;
+        z-index: 2002;
       }
       border-bottom: 1px solid #b3b3b3;
     }
   }
 }
-
+.nav-title-text{
+  position: relative;
+  z-index: 2003;
+}
 
 .side-nav{
   height: 100%;
@@ -185,3 +190,15 @@
   }
 }
 
+.nav-hub-progress{
+  z-index: 2001;
+  width:0;
+  height:100%;
+  position:absolute;
+  left:0;
+  top:0;
+  background-color: @primary;
+}
+.morphext > .animated {
+  display: inline-block;
+}
