--- a/production/imports/ui/stylingsheets/stream.less
+++ b/production/imports/ui/stylingsheets/stream.less
@@ -74,26 +74,53 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: @primary;
+  background-color: #fff;
+  opacity: 0.9;
   overflow: hidden;
   width: 100%;
   height: 0;
   transition: height .5s ease;
 }
+.overlay-small{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: height .3s ease;
+  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
+  .text{
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    width: 90%;
+    color: #fff;
+    display: flex;
+  }
+}
 .image{
   padding: 0 !important;
 }
 .item-container:hover .overlay {
-  height: 100%;
+  height: 30%;
 }
+.item-container:hover .overlay-small {
+  height: 10%;
+}
+
 
 .text {
   width: 80%;
-  color: white;
   position: absolute;
   overflow: hidden;
+  opacity: 1;
   top: 50%;
   left: 50%;
+  color: #333;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   p{
