--- a/production/imports/ui/stylingsheets/course.less
+++ b/production/imports/ui/stylingsheets/course.less
@@ -31,6 +31,12 @@
 }
 .assessment-body{
   border: 1px solid #999999;
+  background-color: #fdfdfd;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
+  &:hover {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  }
 }
 .assessment-performance{
   position: relative;
