--- a/mobile/client/searchBar.css
+++ b/mobile/client/searchBar.css
@@ -11,6 +11,7 @@
     -webkit-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
     box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.2);
+    outline: none;
 }
 
 .search-container{
@@ -20,7 +21,8 @@
 }
 
 .search-bar {
-    margin-left: 55px;
+    position: relative;
+    left: 40px;
     width: 80%;
     height: 40px;
     padding: 0 20px;
@@ -38,11 +40,17 @@
 
 .fa-search{
     position: relative;
-    right: 40px;
+    left: 0px;
 }
 
 .hamburger{
     position: absolute;
+    outline: none;
     top: -2px;
     left: -5px;
+    -webkit-user-select: none; /* Safari, iOS, and Android */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
