--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -284,7 +284,7 @@
                     <h4>Write/Paste your information in the big box below, 140 characters max.</h4>
                 </div>
             </div>
-            {{> announcementHeadline id="textOnlyHeadline"}}
+            {{> announcementHeadline id="textImageHeadline"}}
             {{> announcementTextInput}}
             {{> announcementImageInput id="announcementImageTwo"}}
             {{> announcementOptions imgAndText=true}}
@@ -306,7 +306,7 @@
         <div class="col-lg-4 col-md-3">
             <h3>Add Some Tags</h3>
             <p>By adding some tags, other users can more easily find your post by search. To add a tag, simply write in the text box below, hit enter after every tag.</p>
-            <input data-role="tagsinput" class="tags" placeholder="Write your tags here">
+            <input data-role="tagsinput" class="tags" placeholder="Write your tags here" id="tags">
             <h3>Select Categories</h3>
             <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
             <select name="category-selector" class="category-select" multiple style="width: 75%">
@@ -359,7 +359,7 @@
     <div class="row mb-45">
         <div class="col-lg-12 col-md-12">
             <h3>Text Portion</h3>
-            <textarea placeholder="Add your information here! 140 characters max." class="announcement-text" maxlength="140" id="textImageText"></textarea>
+            <textarea placeholder="Add your information here! 140 characters max." class="announcement-text" maxlength="140" id="textContent"></textarea>
             <p class="text-left">You have <span class="announcement-counter">140</span> characters left.</p>
         </div>
     </div>
