categories and course page improv

--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -50,7 +50,7 @@
             <a href="logout" class="logout-btn">LOG OUT</a>
         </div>
         <div class="side-nav-body">
-            <a href="">Stream</a>
+            <a href="/">Stream</a>
             <a href="">Blogs</a>
             <a href="" id="academics"><div class="expand-text">Academics</div><i class="fa fa-bars academics-icon"></i></a>
             <ul class="course-list">
