--- a/production/imports/ui/stylingsheets/course.less
+++ b/production/imports/ui/stylingsheets/course.less
@@ -25,9 +25,13 @@
   color: #FFFFFF;
 }
 .section-card{
-  transition: all .3s;
   background-color: #FFFFFF;
   padding: 20px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
+  &:hover {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  }
 }
 .assessment-body{
   border: 1px solid #999999;
@@ -90,6 +94,10 @@
     background: @application-bar;
   }
 }
+.performance-mark{
+  font-weight: 700;
+  margin-bottom: 0;
+}
 .not-available{
   background: #d3d3d3;
   opacity: 0.5;
@@ -121,4 +129,47 @@
   position: absolute;
   right: 25px;
   cursor: pointer;
+}
+.breathing{
+  -webkit-animation: breathing 7s ease-out infinite normal;
+  animation: breathing 7s ease-out infinite normal;
+}
+@-webkit-keyframes circleBounce {
+  0% {-webkit-transform: scale(0.9); opacity: 0;}
+  20% {opacity: 0.5;}
+  50% {opacity: 1;}
+  80% {opacity: 0.5;}
+  100% {-webkit-transform: scale(1.1); opacity:0;}
+}
+
+.breathing {
+  position: relative;
+  width: 6px;
+  height: 6px;
+  border: 3px solid red;
+  border-top: none;
+  border-left: none;
+  cursor:pointer;
+
+  -webkit-transform: rotate(45deg);
+  -webkit-transform-origin: 50% 50%;
+}
+
+.breathing:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: calc(50% - 23px); /*circle = 1+50+1 = 52px*/
+  left: calc(50% - 23px); /*arrow = 3+3 = 6px*/
+  width: 50px;
+  height: 50px;
+  border: 1px solid rgba(255,255,255,.8);
+  border: 1px solid red;
+  border-radius: 50%;
+
+  -webkit-animation: circleBounce 1.2s linear infinite;
+}
+
+.breathing:hover:after {
+  background-color: rgba(255,0,0,.15);
 }
