--- a/mobile/imports/ui/components/searchBar.html
+++ b/mobile/imports/ui/components/searchBar.html
@@ -6,7 +6,7 @@
           </span>
         </button>
         <form class="search-container">
-            <input type="text" class="search-bar" placeholder="Search for news...">
+            <input type="text" class="search-bar" id="search-bar" placeholder="Search for news...">
             <i class="fa fa-search" aria-hidden="true"></i>
         </form>
     </nav>
