--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -345,9 +345,9 @@
             <h3>Pick a date range</h3>
             <p>Use the date selector bellow to select the days you would like this post to be visible to the rest of the users.</p>
             <div class="input-group input-daterange">
-                <input type="text" class="form-control" id="startDate">
+                <input type="text" class="form-control startDate" >
                 <div class="input-group-addon">to</div>
-                <input type="text" class="form-control" id="endDate">
+                <input type="text" class="form-control endDate">
             </div>
         </div>
     </div>
