Added a lot of front end stuff

--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -4,7 +4,7 @@
             <div class="nav-extend"><span class="side-nav-prompt"><i class="fa fa-bars"></i> MENU</span></div>
             <div class="nav-hub">
                 <div class="nav-hub-progress"></div>
-                <div class="nav-title-text text-morph"><span>{{title}} ,::, You Received: 90%</span></div>
+                <div class="nav-title-text text-morph"><span>{{title}}</span></div>
             </div>
             <div class="nav-oper">
                 <span class="top-operation-prompt">
@@ -52,14 +52,14 @@
         <div class="side-nav-body">
             <a href="/">Stream</a>
             <a href="">Blogs</a>
-            <a href="" id="academics"><div class="expand-text">Academics</div><i class="fa fa-bars academics-icon"></i></a>
+            <a href="" id="academics"><div class="expand-text">Academics</div><i class="fa fa-times academics-icon"></i></a>
             <ul class="course-list">
                 <li><a href="">ICS4U1</a></li>
                 <li><a href="">TEJ3M1</a></li>
                 <li><a href="">ENG4U1</a></li>
                 <li><a href="">MDM4U1</a></li>
             </ul>
-            <a href="#">Editor</a>
         </div>
     </div>
+    <div class="nav-overlay"></div>
 </template>
