--- a/production/imports/ui/stylingsheets/details.less
+++ b/production/imports/ui/stylingsheets/details.less
@@ -35,6 +35,7 @@
   padding-bottom: 30px;
 }
 .post-body{
+  background-color: #f4f4f4;
   font-size: 18px;
   p{
     font-size: 18px;
@@ -67,7 +68,12 @@
 }
 .post-text{
   h2{
-    font-size: 30px;
+    font-size: 35px;
+  }
+  img{
+    margin: auto;
+    display: block;
+    width: 80% !important;
   }
 }
 .author-img-container{
