--- a/production/imports/ui/stylingsheets/navigation.less
+++ b/production/imports/ui/stylingsheets/navigation.less
@@ -4,7 +4,7 @@
   position: fixed;
   transition: all 0.5s;
   width: 100%;
-  z-index: 2000;
+  z-index: 3;
   background-color: @nav-color;
   form{
     display: block;
@@ -113,7 +113,13 @@
   position: relative;
   z-index: 2003;
 }
-
+.nav-overlay{
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+}
 .side-nav{
   height: 100%;
   width: 320px;
@@ -191,7 +197,7 @@
 }
 
 .nav-hub-progress{
-  z-index: 2001;
+  z-index: 4;
   width:0;
   height:100%;
   position:absolute;
