--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -303,7 +303,7 @@
     <div class="row mb-45 text-left">
         <div class="col-lg-4 col-md-3">
             <h3>Add Some Tags</h3>
-            <p>By adding some tags, other users can more easily find your post by search. To add a tag, simply write in the text box below, hit enter after every tag.</p>
+            <p>By adding some tags, other users can easily find your post by search. To add a tag, simply write in the text box below, hit enter after every tag.</p>
             <input data-role="tagsinput" class="announce-tags" placeholder="Write your tags here">
             <h3>Select Categories</h3>
             <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
