datepickers now limit time, post btn added

--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -412,8 +412,8 @@
         <div class="mb-45">
             <div class="row mb-30 text-center">
                 <div class="col-lg-12 col-md-12 col-sm-12 mb-30">
-                    <h2>Nice,</h2>
-                    <h4>What would you like to compose?</h4>
+                    <h2>Feedback and suggestions,</h2>
+                    <h4>Voice your concerns to the school admins and the developers of uhs.life directly.</h4>
                 </div>
             </div>
         </div>
@@ -421,5 +421,10 @@
         {{> announcementTextInput max="500"}}
         <h3>Add an image if you like!</h3>
         {{> announcementImageInput id="suggestionImage"}}
+        <div class="row mb-45">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <button class="btn btn-login btn-post">POST</button>
+            </div>
+        </div>
     </div>
 </template>
