--- a/production/imports/ui/stylingsheets/editor.less
+++ b/production/imports/ui/stylingsheets/editor.less
@@ -443,3 +443,21 @@ i.material-icons:hover {
     background-color: darkgrey;
   }
 }
+.editable{
+  h1{
+    font-size: 65px;
+  }
+  h2{
+    font-size: 40px;
+  }
+}
+.fr-toolbar{
+  a{
+    border:none;
+    box-shadow: none;
+    &:hover, &:active, &:focus{
+      color: #333;
+      background: #FFFFFF;
+    }
+  }
+}
