Stream almost works now
Still a lot of bugs prominant in the system, mostly image related.

We need to work to iron them out, however, my main focus now is the admin pannel which is no where near completed.

--- a/production/imports/ui/stylingsheets/stream.less
+++ b/production/imports/ui/stylingsheets/stream.less
@@ -5,7 +5,9 @@
   margin-top: 115px;
   transition: all .5s;
 }
-
+.img-responsive{
+  margin: auto;
+}
 .button-group{
   text-align: center;
   button{
@@ -99,7 +101,6 @@
     font-weight: 300;
     width: 90%;
     color: #fff;
-    display: flex;
   }
 }
 .image{
@@ -109,9 +110,11 @@
   height: 30%;
 }
 .item-container:hover .overlay-small {
-  height: 10%;
+  height: 80px;
 }
-
+.image-only-author{
+  display: flex;
+}
 
 .text {
   width: 80%;
@@ -125,6 +128,9 @@
   -ms-transform: translate(-50%, -50%);
   p{
     font-size: 18px;
+  }
+  h4{
+    margin: 0;
   }
 }
 .post-title{
