--- a/mobile/client/home.css
+++ b/mobile/client/home.css
@@ -24,7 +24,7 @@
  */
 
 .home-container{
-    margin-bottom: 50px;
+    margin-bottom: 60px;
 }
 .home-card-wrapper{
     max-width: 600px;
@@ -69,11 +69,40 @@
 
 
 /* card article */
-.card__article a {
-    text-decoration: none;
-    color: #444;
-    transition: all 0.5s ease;
-}
 .card__article a:hover {
     color: #2980b9;
+}
+
+.home-title{
+    margin-top: -20px;
+}
+
+.home-subtitle{
+    color: dimgray;
+    font-size: medium;
+    font-weight: 400;
+    margin-top: -25px;
+}
+
+.home-link{
+    display: inline-block;
+    margin: 0.3em;
+    padding: 0.3em 1.25em;
+    overflow: hidden;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 2px;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+    border: none;
+    font-size: 10px;
+    text-align: center;
+    background-color: #3498db;
+    color: white;
 }
