minor dashboard improvements

--- a/production/imports/ui/stylingsheets/dash.less
+++ b/production/imports/ui/stylingsheets/dash.less
@@ -61,8 +61,6 @@
     }
   }
 }
-.dash-body{
-}
 .dash-item{
   background-color: #FFFFFF;
   padding: 15px;
@@ -75,7 +73,10 @@
   .meta{
     font-size: 12px;
   }
-
+}
+.flexed{
+  display: flex;
+  align-items: center;
 }
 .btn-approve{
   background-color: #4CAF50;
@@ -90,8 +91,9 @@
   }
 }
 .image-preview{
+  max-width: 50%;
   img{
-    max-width: 70%;
+    max-width: 90%;
   }
 }
 .btn-reject{
