--- a/production/imports/ui/stylingsheets/stream.less
+++ b/production/imports/ui/stylingsheets/stream.less
@@ -31,7 +31,7 @@
   margin-bottom: 30px;
   background: #FFFFFF;
   padding: 15px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
   transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
   background-size: cover !important;
   background-repeat: no-repeat !important;
@@ -41,7 +41,8 @@
     font-size: 28px;
   }
   &:hover {
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    transform: translateY(-2px);
+    box-shadow: 0 11px 20px rgba(50,50,93,.1), 0 6px 11px rgba(0,0,0,.08);
   }
 }
 .grid-blog-body{
