--- a/production/imports/ui/stylingsheets/course.less
+++ b/production/imports/ui/stylingsheets/course.less
@@ -32,19 +32,23 @@
 .section-card{
   background-color: #FFFFFF;
   padding: 20px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
   transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
   &:hover {
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    transform: translateY(-2px);
+    box-shadow: 0 11px 20px rgba(50,50,93,.1), 0 6px 11px rgba(0,0,0,.08);
   }
 }
+.assessment-info{
+  padding-top: 1px;
+}
 .assessment-body{
-  border: 1px solid #999999;
   background-color: #fdfdfd;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
   transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
   &:hover {
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    transform: translateY(-2px);
+    box-shadow: 0 11px 20px rgba(50,50,93,.1), 0 6px 11px rgba(0,0,0,.08);
   }
 }
 .assessment-performance{
