--- a/production/imports/ui/stylingsheets/navigation.less
+++ b/production/imports/ui/stylingsheets/navigation.less
@@ -5,7 +5,7 @@
   transition: all 0.5s;
   width: 100%;
   z-index: 3;
-  background-color: @nav-color;
+  box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
   form{
     display: block;
     width: 100%;
@@ -22,7 +22,7 @@
       font-weight: 300;
       font-size: 45px;
       border-left: none;
-      border-top: none;
+      border-top: 1px solid #b3b3b3;
       border-right: none;
       text-align: center;
       padding: 20px 30px 20px 30px;
@@ -69,7 +69,6 @@
       text-align: center;
       display: flex;
       align-items: center;
-      border-bottom: 1px solid #b3b3b3;
       cursor: pointer;
       span{
         vertical-align: middle;
@@ -85,7 +84,6 @@
       width:84%;
       text-align: center;
       display: inline-block;
-      border-bottom: 1px solid #b3b3b3;
       border-left: 1px solid #b3b3b3;
       border-right: 1px solid #b3b3b3;
     }
@@ -105,7 +103,6 @@
         width: 100%;
         z-index: 2002;
       }
-      border-bottom: 1px solid #b3b3b3;
     }
   }
 }
