Admin user editor is working quite well

--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -182,8 +182,8 @@
                             <option value="design">Graphic Design</option>
                         </select>
                         <hr />
-                        <input type='checkbox' class='ios8-switch ios8-switch-lg' id='checkboxContribute'>
-                        <label for='checkboxContribute'>Allow Others To Contribute</label>
+<!--                        <input type='checkbox' class='ios8-switch ios8-switch-lg' id='checkboxContribute'>
+                        <label for='checkboxContribute'>Allow Others To Contribute</label>-->
                     </div>
                 </div>
             </div>
