--- a/production/imports/ui/stylingsheets/editor.less
+++ b/production/imports/ui/stylingsheets/editor.less
@@ -177,6 +177,7 @@
 
 /* Dropdown Button */
 .dropbtn {
+  width: 100%;
   background-color: #4CAF50;
   color: white;
   padding: 16px;
@@ -187,6 +188,7 @@
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
+  width: 100%;
   position: relative;
   display: inline-block;
 }
@@ -207,6 +209,8 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  border:none;
+  box-shadow: none;
 }
 
 /* Change color of dropdown links on hover */
