Category system is working

--- a/production/imports/ui/stylingsheets/buttons.less
+++ b/production/imports/ui/stylingsheets/buttons.less
@@ -5,7 +5,8 @@
   -moz-transition: all 0.3s ease 0s;
   -webkit-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
-  border:none;
+  border: none;
+  border-radius: 0;
   box-shadow: none;
   &:disabled{
     cursor: not-allowed;
@@ -17,7 +18,7 @@
 }
 .btn-lg{
   padding: 15px 64px;
-  border-radius: 2px;
+  border-radius: 0;
 }
 
 .btn-white{
