--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -1,147 +1,153 @@
 <template name="editor">
-    <div class="navbar-fixed-bottom editor-open">
-        <i class="material-icons" id="openEditor">add</i>
-    </div>
-    <div class="container-fluid editor-main" hidden>
-        <div class="navbar-fixed-top">
-            <a class="editor-control editor-back"><i class="fa fa-arrow-left"></i></a>
-            <a class="editor-control editor-close"><i class="fa fa-times"></i></a>
+    {{#if canEdit}}
+        <div class="navbar-fixed-bottom editor-open">
+            <i class="material-icons" id="openEditor">add</i>
         </div>
-        {{> announcementMenu}}
-        {{> blogEditor}}
-        {{> announcementEditor}}
-        {{> suggestionEditor}}
-        <div class="container blog-drafts" hidden>
-            <div class="center-wrapper">
-                <div class="mb-45">
-                    <div class="row mb-30">
-                        <div class="col-lg-12 col-md-12 col-sm-12 mb-30 text-center mt-30">
-                            <h2>Here are all your drafts,</h2>
-                            <h4>Click on one to continue to create</h4>
+        <div class="container-fluid editor-main" hidden>
+            <div class="navbar-fixed-top">
+                <a class="editor-control editor-back"><i class="fa fa-arrow-left"></i></a>
+                <a class="editor-control editor-close"><i class="fa fa-times"></i></a>
+            </div>
+            {{> announcementMenu}}
+            {{> blogEditor}}
+            {{> announcementEditor}}
+            {{> suggestionEditor}}
+            <div class="container blog-drafts" hidden>
+                <div class="center-wrapper">
+                    <div class="mb-45">
+                        <div class="row mb-30">
+                            <div class="col-lg-12 col-md-12 col-sm-12 mb-30 text-center mt-30">
+                                <h2>Here are all your drafts,</h2>
+                                <h4>Click on one to continue to create</h4>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 draft-item">
-                            <!-- Blog post example, with featured image -->
-                            <div class="editor-options draft-inline">
-                                <div class="image-preview">
-                                    <img src="https://dummyimage.com/800x600" class="img-responsive">
+                        <div class="row">
+                            <div class="col-lg-12 draft-item">
+                                <!-- Blog post example, with featured image -->
+                                <div class="editor-options draft-inline">
+                                    <div class="image-preview">
+                                        <img src="https://dummyimage.com/800x600" class="img-responsive">
+                                    </div>
+                                    <div class="content-preview">
+                                        <h3 class="draft-title">This is an example of draft item with image</h3>
+                                        <span>Originally Created: Dec 24th, 2017. Format: Announcement</span>
+                                        <p class="draft-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam asperiores aut beatae ea eaque earum enim excepturi fuga in, ipsa laborum nobis obcaecati optio quam repellat sed tempora veniam!</p>
+                                        <div class="dropdown">
+                                            <button class="dropbtn">Quick Actions</button>
+                                            <div class="dropdown-content">
+                                                <a href="#">Publish</a>
+                                                <a href="#"><i class="fa fa-trash-o"></i> Delete</a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="content-preview">
-                                    <h3 class="draft-title">This is an example of draft item with image</h3>
-                                    <span>Originally Created: Dec 24th, 2017. Format: Announcement</span>
-                                    <p class="draft-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam asperiores aut beatae ea eaque earum enim excepturi fuga in, ipsa laborum nobis obcaecati optio quam repellat sed tempora veniam!</p>
-                                    <div class="dropdown">
-                                        <button class="dropbtn">Quick Actions</button>
-                                        <div class="dropdown-content">
-                                            <a href="#">Publish</a>
-                                            <a href="#"><i class="fa fa-trash-o"></i> Delete</a>
+                            </div>
+                            <!-- No featured image -->
+                            <div class="col-lg-12 draft-item">
+                                <div class="editor-options draft-inline">
+                                    <div class="content-preview">
+                                        <h3 class="draft-title">This is an example of draft item with no images</h3>
+                                        <span>Originally Created: Dec 24th, 2017. Tags: Test, Nice Tag, Wow</span>
+                                        <p class="draft-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam asperiores aut beatae ea eaque earum enim excepturi fuga in, ipsa laborum nobis obcaecati optio quam repellat sed tempora veniam!</p>
+                                        <div class="dropdown">
+                                            <button class="dropbtn">Quick Actions</button>
+                                            <div class="dropdown-content">
+                                                <a href="#">Publish</a>
+                                                <a href="#"><i class="fa fa-trash-o"></i> Delete</a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <!-- No featured image -->
-                        <div class="col-lg-12 draft-item">
-                            <div class="editor-options draft-inline">
-                                <div class="content-preview">
-                                    <h3 class="draft-title">This is an example of draft item with no images</h3>
-                                    <span>Originally Created: Dec 24th, 2017. Tags: Test, Nice Tag, Wow</span>
-                                    <p class="draft-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam asperiores aut beatae ea eaque earum enim excepturi fuga in, ipsa laborum nobis obcaecati optio quam repellat sed tempora veniam!</p>
-                                    <div class="dropdown">
-                                        <button class="dropbtn">Quick Actions</button>
-                                        <div class="dropdown-content">
-                                            <a href="#">Publish</a>
-                                            <a href="#"><i class="fa fa-trash-o"></i> Delete</a>
-                                        </div>
-                                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container blog-intro text-center">
+                <div class="center-wrapper">
+                    <div class="post-source mb-45">
+                        <div class="row mb-30">
+                            <div class="col-lg-12 col-md-12 col-sm-12 mb-30">
+                                <h2>Welcome to The Composer</h2>
+                                <h4>Select a place to start writing</h4>
+                            </div>
+                        </div>
+                        <div class="row text-center mb-30">
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" >
+                                <div class="editor-options" id="startNewDraft">
+                                    <i class="fa fa-pencil fa-5x mb-15"></i>
+                                    <p>Create from scratch</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-sm-12 col-xs-12">
+                                <div class="editor-options" id="checkDrafts">
+                                    <i class="fa fa-file-text-o fa-5x mb-15"></i>
+                                    <p>Resume a Draft</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row text-center">
+                            <div class="col-lg-12">
+                                <div class="editor-options" id="checkDrafts">
+                                    <i class="fa fa-list fa-5x mb-15" aria-hidden="true"></i>
+                                    <p>Check all your posts</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container blog-intro text-center">
-            <div class="center-wrapper">
-                <div class="post-source mb-45">
-                    <div class="row mb-30">
-                        <div class="col-lg-12 col-md-12 col-sm-12 mb-30">
-                            <h2>Welcome to The Composer</h2>
-                            <h4>Select a place to start writing</h4>
-                        </div>
-                    </div>
-                    <div class="row text-center mb-30">
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" >
-                            <div class="editor-options" id="startNewDraft">
-                                <i class="fa fa-pencil fa-5x mb-15"></i>
-                                <p>Create from scratch</p>
+            <div class="container post-type text-center" hidden>
+                <div class="center-wrapper">
+                    <div class="mb-45">
+                        <div class="row mb-30">
+                            <div class="col-lg-12 col-md-12 col-sm-12 mb-30">
+                                <h2>Nice,</h2>
+                                <h4>What would you like to compose?</h4>
                             </div>
                         </div>
-                        <div class="col-lg-6 col-sm-12 col-xs-12">
-                            <div class="editor-options" id="checkDrafts">
-                                <i class="fa fa-file-text-o fa-5x mb-15"></i>
-                                <p>Resume a Draft</p>
+                        <div class="row text-center mb-30">
+                            {{# if canWriteAnnounce}}
+                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="startAnnouncement">
+                                    <div class="editor-options">
+                                        <i class="fa fa-bullhorn fa-5x mb-15"></i>
+                                        <p>Announcement</p>
+                                    </div>
+                                </div>
+                            {{/ if}}
+                            {{# if canWriteBlog}}
+                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="startBlog">
+                                    <div class="editor-options">
+                                        <i class="fa fa-newspaper-o fa-5x mb-15"></i>
+                                        <p>Blog Post</p>
+                                    </div>
+                                </div>
+                            {{/ if}}
+                            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="startSuggestion">
+                                <div class="editor-options">
+                                    <i class="fa fa-commenting-o fa-5x mb-15"></i>
+                                    <p>Suggestion</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row text-center">
-                        <div class="col-lg-12">
-                            <div class="editor-options" id="checkDrafts">
-                                <i class="fa fa-list fa-5x mb-15" aria-hidden="true"></i>
-                                <p>Check all your posts</p>
-                            </div>
-                        </div>
+                        <!--                    <div class="row text-center">
+                                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="startAnnouncement">
+                                                    <div class="editor-options">
+                                                        <i class="fa fa-calendar-o fa-5x mb-15"></i>
+                                                        <p>Schedule</p>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="startAnnouncement">
+                                                    <div class="editor-options">
+                                                        <i class="fa fa-toggle-right fa-5x mb-15"></i>
+                                                        <p>Gallery</p>
+                                                    </div>
+                                                </div>-->
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container post-type text-center" hidden>
-            <div class="center-wrapper">
-                <div class="mb-45">
-                    <div class="row mb-30">
-                        <div class="col-lg-12 col-md-12 col-sm-12 mb-30">
-                            <h2>Nice,</h2>
-                            <h4>What would you like to compose?</h4>
-                        </div>
-                    </div>
-                    <div class="row text-center mb-30">
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="startAnnouncement">
-                            <div class="editor-options">
-                                <i class="fa fa-bullhorn fa-5x mb-15"></i>
-                                <p>Announcement</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="startBlog">
-                            <div class="editor-options">
-                                <i class="fa fa-newspaper-o fa-5x mb-15"></i>
-                                <p>Blog Post</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="startSuggestion">
-                            <div class="editor-options">
-                                <i class="fa fa-commenting-o fa-5x mb-15"></i>
-                                <p>Suggestion</p>
-                            </div>
-                        </div>
-                    </div>
-<!--                    <div class="row text-center">
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="startAnnouncement">
-                            <div class="editor-options">
-                                <i class="fa fa-calendar-o fa-5x mb-15"></i>
-                                <p>Schedule</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="startAnnouncement">
-                            <div class="editor-options">
-                                <i class="fa fa-toggle-right fa-5x mb-15"></i>
-                                <p>Gallery</p>
-                            </div>
-                        </div>-->
-                </div>
-            </div>
-        </div>
-    </div>
+    {{/if}}
 </template>
 
 <template name="blogEditor">
@@ -302,7 +308,7 @@
     <div class="row">
         <div class="col-lg-12 col-md-12">
             <form class="form post-info-form full-width">
-                <input type="text" placeholder="Headline*" id="{{id}}">
+                <input type="text" placeholder="Headline*" id="{{id}}" maxlength="30">
             </form>
         </div>
     </div>
