--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -22,17 +22,19 @@
                         <p><i class="fa fa-arrow-up" aria-hidden="true"></i> </p>
                         <p class="unselectable">Type something in the box above to search</p>
                     </div>
-                    <div class="col-lg-12 search-result">
-                        <h2>This is a test</h2>
-                        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt ex facilis fuga ipsum labore
-                            odit perspiciatis possimus sapiente ullam voluptates. Alias architecto dolorum est neque non?
-                            Exercitationem inventore laborum sit.
+                    {{#each searchContent}}
+                        <div class="col-lg-12 search-result">
+                            <h2>{{headline}}</h2>
+                            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt ex facilis fuga ipsum labore
+                                odit perspiciatis possimus sapiente ullam voluptates. Alias architecto dolorum est neque non?
+                                Exercitationem inventore laborum sit.
+                            </div>
+                            <div>Architecto aspernatur assumenda autem beatae dicta dolor earum error et eum excepturi
+                                exercitationem hic inventore laboriosam modi necessitatibus officiis pariatur praesentium quia quo
+                                rem reprehenderit similique, soluta suscipit ullam voluptatum.
+                            </div>
                         </div>
-                        <div>Architecto aspernatur assumenda autem beatae dicta dolor earum error et eum excepturi
-                            exercitationem hic inventore laboriosam modi necessitatibus officiis pariatur praesentium quia quo
-                            rem reprehenderit similique, soluta suscipit ullam voluptatum.
-                        </div>
-                    </div>
+                    {{/each}}
                 </div>
             </div>
         </div>
