--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -14,7 +14,7 @@
         </nav>
         <div>
             <form class="global-search">
-                <input type="text" placeholder="Type something here to search" class="main-search" id="globalSearch">
+                <input type="text" placeholder="Type something here to search" class="main-search" id="globalSearch" autocomplete="off">
             </form>
             <div class="search-content">
                 <div class="container pt-60">
@@ -23,15 +23,11 @@
                         <p class="unselectable">Type something in the box above to search</p>
                     </div>
                     {{#each searchContent}}
-                        <div class="col-lg-12 search-result">
-                            <h2>{{headline}}</h2>
-                            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt ex facilis fuga ipsum labore
-                                odit perspiciatis possimus sapiente ullam voluptates. Alias architecto dolorum est neque non?
-                                Exercitationem inventore laborum sit.
-                            </div>
-                            <div>Architecto aspernatur assumenda autem beatae dicta dolor earum error et eum excepturi
-                                exercitationem hic inventore laboriosam modi necessitatibus officiis pariatur praesentium quia quo
-                                rem reprehenderit similique, soluta suscipit ullam voluptatum.
+                        <div class="col-lg-6 ">
+                            <div class="search-result">
+                                <h2>{{headline}}</h2>
+                                <p>{{content}}</p>
+                                <img class="img-responsive" src="{{img}}">
                             </div>
                         </div>
                     {{/each}}
