--- a/production/imports/ui/stylingsheets/navigation.less
+++ b/production/imports/ui/stylingsheets/navigation.less
@@ -39,6 +39,7 @@
     .img-responsive{
       max-width: 50%;
     }
+
   }
   .search-prompt{
     text-align: center;
@@ -54,6 +55,12 @@
     margin-bottom: 30px;
     padding: 15px;
     background-color: #FFFFFF;
+    box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    &:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 11px 20px rgba(50,50,93,.1), 0 6px 11px rgba(0,0,0,.08);
+    }
   }
   nav{
     transition: all .5s;
